# archerdb

./: .editorconfig  .gitignore  ALL-REQUIREMENTS-MET-PROOF.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_SDK_TEST_REPORT.md  CONTRIBUTING.md  DATABASE_VALIDATION_CHECKLIST.md  FINAL-GRADE-100-PERFECT.md  FINAL-PRODUCTION-CERTIFICATION.md  FINAL-RALPH-CERTIFICATION.md  FINAL-SDK-STATUS.md  FINALIZATION_PLAN.md  GOVERNANCE.md  GO_SDK_GETSTATUS_FIX.md  IMPLEMENTATION-COMPLETE-MANIFEST.md  LICENSE  NOTICE  POLYGON_BUG_FIX.md  PRODUCTION-EXCELLENCE-CERTIFIED.md  PRODUCTION-READINESS-VERIFIED.md  PRODUCTION_READINESS.md  QUERY-RESULT-SIZES.md  RALPH-ITERATION-19-FINAL.md  RALPH-LOOP-COMPLETE.md  RALPH-LOOP-COMPLETION-REPORT.md  RALPH-LOOP-FINAL-REPORT.md  RALPH-LOOP-ITERATION-20-COMPLETE.md  RALPH_LOOP_COMPLETE.md  RALPH_LOOP_FINAL_HONEST_STATUS.md  RALPH_LOOP_FINAL_RESULTS.md  RALPH_LOOP_ITERATION_1_COMPLETE.md  RALPH_LOOP_ITERATION_2_COMPLETE.md  RALPH_LOOP_ITERATION_9_COMPLETE.md  READINESS_REPORT.md  README.md  REQUIREMENTS-VERIFICATION-CHECKLIST.md  SDK-FINAL-14OF14-STATUS.md  SDK-TESTING-COMPLETE.md  (+28 more)
src/clients/python/: README.md  benchmark.py  ci.zig  cluster_benchmark.py  cluster_test.py  docs.zig  pyproject.toml  python_bindings.zig  reproduce_crash.py  reproduce_crash_env.sh
src/clients/python/samples/basic/: README.md  main.py
src/clients/python/samples/polygon-query/: README.md  main.py
src/clients/python/tests/: conftest.py  test_basic.py  test_close.py  test_distributed_errors.py  test_geo_routing.py  test_geojson_wkt.py  test_init_parameters.py  test_integration.py  test_v2_errors.py
src/clients/rust/: ARCHERDB_STATUS.md  Cargo.toml  README.md  build.rs  ci.zig  docs.zig  rust_bindings.zig
src/clients/rust/assets/: arch_client.h
src/clients/rust/src/: arch_client.rs  circuit_breaker.rs  conversions.rs  geo_routing.rs  lib.rs  observability.rs  retry_policy.rs  tb_client.rs  time_based_id.rs
src/clients/rust/tests/: geo_tests.rs  status_codes_and_flags.rs.bak  tests.rs  wire_format_tests.rs
(+1706 files in other folders)
