[project]
name = "archerdb"
version = "0.0.1"
description = "The ArcherDB client for Python - a geospatial database."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database :: Front-Ends",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://github.com/ArcherDB-io/archerdb"
Issues = "https://github.com/ArcherDB-io/archerdb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["archerdb"]
artifacts = ["*.so", "*.dylib", "*.dll"]

[tool.hatch.build.targets.sdist.force-include]
"src/archerdb" = "archerdb"
"README.md" = "archerdb/README.md"

[tool.hatch.build.targets.wheel]
only-include = ["archerdb"]
artifacts = ["*.so", "*.dylib", "*.dll"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
exclude = [
    "samples/",
    "tests/",
]
