[package]
name = "archerdb"
version = "0.0.0"
edition = "2021"
description = "ArcherDB geospatial database client for Rust"
license = "Apache-2.0"
authors = ["ArcherDB Contributors"]
homepage = "https://archerdb.io"
repository = "https://github.com/archerdb/archerdb"
documentation = "https://docs.rs/archerdb"
keywords = ["geospatial", "location", "gis", "database", "tracking"]
categories = ["database", "science::geo"]
rust-version = "1.63"
# Need to do this to pick up the assets directory and exclude zig files
include = [
  "build.rs",
  "src/*.rs",
  "assets/arch_client.h",
  "assets/lib/*/{*.a,*.lib}",
]

[dependencies]
bitflags = "2.6.0"
futures-channel = "0.3.31"

[build-dependencies]
anyhow = "1.0.93"

[dev-dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
